[project]
name = "llmground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "ruff>=0.11.11",
    "setuptools>=80.8.0",
    "tool>=0.8.0",
    "uvicorn>=0.34.2",
    "vllm>=0.8.5.post1",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
